# Examples

./: .env.example  README.md  pyproject.toml
examples/: extract_company_name.py
examples/company_research_sales_strategy/: README.md  schemas.py  upsonic_configs.json
examples/contract_analyzer/: main.py
examples/crypto_block_policy/: crypto_block_policy.py
examples/find_agreement_links/: README.md
examples/find_company_website/: find_company_website.py
examples/find_example_product/: README.md
examples/find_sales_categories/: find_sales_categories.py
examples/firecrawl_shopping_scraper/: .env.example  README.md  main.py  requirements.txt
examples/gpt_oss_safety_agent/: .env.example  upsonic_configs.json
examples/groq_code_review_agent/: agent.py  main.py
examples/landing_page_generation/: schemas.py
examples/loan_covenant_monitoring/: README.md  agents.py  main.py  schemas.py  task_builder.py  team.py  tools.py  upsonic_configs.json
examples/moltbook_agent/: moltbook_tools.py
examples/nvidia-agent/: .env.example  README.md  upsonic_configs.json
task_examples/ai_lexicon/: README.md  main.py  tools.py
task_examples/classify_emails/: README.md  classify_emails.py
task_examples/company_research_sales_strategy/: README.md  main.py  orchestrator.py  subagents.py  task_builder.py
task_examples/contract_analyzer/: README.md  app.py  main.py  requirements.txt  streamlit_app.py  upsonic_configs.json
task_examples/crypto_block_policy/: README.md  crypto_block_policy.py
task_examples/document_analyzer/: extract_company_name.py
task_examples/extract_people/: README.md  extract_people.py
task_examples/find_agreement_links/: README.md  find_agreement_links.py
task_examples/find_company_mail/: README.md  email_utils.py  serper_client.py  (+1 more)
(+124 files in other folders)
