[project]
name = "examples"
version = "0.1.0"
description = "Upsonic example tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "upsonic==0.63.0",
    "pydantic==2.10.5",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "rich",
    "pydantic-ai==0.3.2",
    "httpx",
    "typer",
    "transformers",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-frontmatter>=1.1.0",
    "psutil==6.1.1",
    "pillow",
    "openpyxl",
    "jq>=1.10.0",
    "python-dotenv",
    "playwright>=1.49.0",
    "markitdown>=0.0.2",
    "openai>=1.109.1",
    "duckduckgo-search>=8.1.1",
    "streamlit==1.32.2",
    "fastapi>=0.124.4",
    "uvicorn>=0.34.2",
    "pypdf2>=3.0.1",
    "chromadb>=1.3.7",
    "pytest>=9.0.2",
    "ipdb>=0.13.13",
]

[tool.uv]
override-dependencies = [
    "torch==2.7.0",
]
